feat: now supports running athena templates from s3
