# openapi/athena-workflow.yaml
@@ -66,12 +66,6 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/ErrorResponse'
-        '502':
-          description: Bad Gateway, Athena return a status other than successfully so it failed to run the query
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/RunAthenaQueryTemplateResponse'
       x-amazon-apigateway-integration:
         uri:
           'Fn::Sub': 'arn:${AWS::Partition}:apigateway:${AWS::Region}:lambda:path/2015-03-31/functions/${AthenaWorkflowApiFunction.Arn}:live/invocations'
@@ -91,8 +85,9 @@ components:
     RunS3AthenaQueryTemplateRequest:
       type: object
       required:
-        - s3_template
         - wait_for_completion
+        - template_name
+        - template_parse_patterns
       properties:
         parameters:
           type: array
@@ -102,43 +97,29 @@ components:
         template_data:
           description: Data to be passed to the Go template.
           type: object
+        template_name:
+          type: string
+          description: The name of the template file to execute.
+        template_parse_patterns:
+          type: array
+          description: List of patterns to parse template files from the S3 bucket, this allows you to use includes to split the template into multiple files.
+          minItems: 1
+          items:
+            type: string
         wait_for_completion:
           description: If true the operation will wait for the query to complete before returning the results.
           type: boolean
-        template_s3_params:
-          type: object
-          required:
-            - bucket
-            - name
-            - parse_patterns
-          properties:
-            bucket:
-              type: string
-              description: The S3 bucket where the templates is stored.
-            name:
-              type: string
-              description: The name of the template file to execute.
-            parse_patterns:
-              type: array
-              description: List of patterns to parse template files from the S3 bucket, this allows you to use includes to split the template into multiple files.
-              minItems: 1
-              items:
-                type: string
     RunAthenaQueryTemplateRequest:
       type: object
       required:
         - template_query
         - wait_for_completion
       properties:
-        query:
-          type: object
-          description: Athena query parameters which are passed as is to the Athena API
-          properties:
-            parameters:
-              type: array
-              description: A list of values for the parameters in an Athena query. The values are applied sequentially to the parameters in the query in the order in which the parameters occur.
-              items:
-                type: string
+        parameters:
+          type: array
+          description: A list of values for the parameters in an Athena query. The values are applied sequentially to the parameters in the query in the order in which the parameters occur.
+          items:
+            type: string
         template_query:
           description: Template using Go template syntax, which is used to generate the Athena query.
           type: string
